# blazing-hdl

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
src/blazing/frontend/: CMakeLists.txt
src/blazing/frontend/ast/: AstDumpTree.hpp  AstPrettyPrint.hpp  CMakeLists.txt  Expr.hpp  Stmt.hpp  Utils.hpp
src/blazing/frontend/codegen/verilog/: CMakeLists.txt  Transpiler.hpp
src/blazing/frontend/parsing/: CMakeLists.txt  Grammar.yy  Lex.l  LexContext.hpp  Scanner.hpp  SourceModule.hpp  SyntaxError.hpp
test/: CMakeLists.txt  test_ast.cpp  test_codegen_verilog.cpp  test_parser.cpp
test/testfiles/ast/: half_adder.expected  module.expected  module.in  non-directional.expected  non-directional.in
test/testfiles/codegen/verilog/: module.expected  module.in
